Calender bugfix, text too long fix

--- a/css/add_task_responsive.css
+++ b/css/add_task_responsive.css
@@ -71,11 +71,32 @@
 
     .addTask-input-container {
         font-size: 16px;
-        padding: 12px 8px;
     }
 
     .assigned-select-input {
         font-size: 16px;
     }
+
+    .subtask-input {
+        font-size: 16px !important;
+    }
      
+}
+
+@media(max-width: 500px) {
+    .addTask-input {
+        padding: 12px 8px !important;
+    }
+
+    .assigned-select {
+        padding: 12px 8px !important;
+    }
+
+    .addTask-textarea {
+        padding: 12px 8px !important;
+    }
+
+    .addTask-input-container {
+        padding: 12px 8px;
+    }
 }
